Fix JDK9 compile issue